--- a/src/scss/components/dropdown/_variables.scss
+++ b/src/scss/components/dropdown/_variables.scss
@@ -2,3 +2,4 @@ $dropdown-border-radius: var(--border-radius-base);
 $dropdown-border-width: var(--border-width-base);
 $dropdown-box-shadow: var(--shadow-6);
 $dropdown-patterns: ("solid") !default;
+$dropdown-z-index: var(--z-index-dropdown);
