--- a/src/scss/root/_animation.scss
+++ b/src/scss/root/_animation.scss
@@ -1,5 +1,5 @@
 :root {
-  --transition-duration-base: #{$transition-duration-base};
-  --transition-duration-slow: #{$transition-duration-slow};
-  --transition-duration-fast: #{$transition-duration-fast};
+  --animation-duration-base: #{$animation-duration-base};
+  --animation-duration-slow: #{$animation-duration-slow};
+  --animation-duration-fast: #{$animation-duration-fast};
 }
