--- a/src/scss/components/index.scss
+++ b/src/scss/components/index.scss
@@ -24,9 +24,8 @@
 
 // Data Entry
 
-// @import "form";
-// @import "form-control";
-// @import "input-group";
+@import "form-input";
+@import "form-select";
 
 // Feedback
 
@@ -63,6 +62,7 @@
 
 // Overlay
 
+@import "drawer";
 @import "dropdown";
 @import "tooltip";
 
