--- a/src/scss/variables/_animation.scss
+++ b/src/scss/variables/_animation.scss
@@ -1,3 +1,3 @@
-$transition-duration-base: 0.4s !default;
-$transition-duration-fast: 0.2s !default;
-$transition-duration-slow: 0.8s !default;
+$animation-duration-base: 0.4s !default;
+$animation-duration-fast: 0.2s !default;
+$animation-duration-slow: 0.8s !default;
