--- a/src/scss/components/tooltip/_variables.scss
+++ b/src/scss/components/tooltip/_variables.scss
@@ -8,4 +8,4 @@ $tooltip-sizes: (
   )
 ) !default;
 $tooltip-patterns: ("solid") !default;
-$tooltip-z-index: var(--z-indez-tooltip) !default;
+$tooltip-z-index: var(--z-index-tooltip) !default;
