--- a/src/scss/animation/_base.scss
+++ b/src/scss/animation/_base.scss
@@ -158,3 +158,39 @@
 %animation-slide-out-right {
   animation-name: animation-slide-out-right;
 }
+
+// zoom
+
+@keyframes animation-zoom-in {
+  from {
+    opacity: 0;
+    transform: scale(0.4);
+  }
+
+  50% {
+    opacity: 1;
+  }
+}
+
+%animation-zoom-in {
+  animation-name: animation-zoom-in;
+}
+
+@keyframes animation-zoom-out {
+  from {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 0;
+    transform: scale(0.4);
+  }
+
+  to {
+    opacity: 0;
+  }
+}
+
+%animation-zoom-out {
+  animation-name: animation-zoom-out;
+}
