--- a/src/scss/components/drawer/_base.scss
+++ b/src/scss/components/drawer/_base.scss
@@ -2,12 +2,31 @@
 
 .drawer {
   @extend %animated;
-  @extend %animation-slide-in-right;
 
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   z-index: $drawer-z-index;
+
+  &.component-placement-top {
+    @extend %animation-slide-in-up;
+
+    width: 100% !important;
+  }
+
+  &.component-placement-right {
+    @extend %animation-slide-in-right;
+  }
+
+  &.component-placement-bottom {
+    @extend %animation-slide-in-down;
+
+    width: 100% !important;
+  }
+
+  &.component-placement-left {
+    @extend %animation-slide-in-left;
+  }
 }
 
 .drawer-backdrop {
@@ -24,9 +43,25 @@
 }
 
 .drawer-container {
+  position: relative;
+
   &.closing {
     .drawer {
-      @extend %animation-slide-out-right;
+      &.component-placement-top {
+        @extend %animation-slide-out-up;
+      }
+
+      &.component-placement-right {
+        @extend %animation-slide-out-right;
+      }
+
+      &.component-placement-bottom {
+        @extend %animation-slide-out-down;
+      }
+
+      &.component-placement-left {
+        @extend %animation-slide-out-left;
+      }
     }
 
     .drawer-backdrop {
@@ -35,18 +70,10 @@
   }
 }
 
-// Color
-
-@each $color in $component-colors {
-  .drawer-color-#{$color} {
-    @include component-color-mixin($color);
-  }
-}
-
 // Patern
 
-@each $pattern in $drawer-patterns {
-  .drawer-pattern-#{$pattern} {
+@each $pattern in $badge-patterns {
+  .drawer.component-pattern-#{$pattern} {
     @include drawer-pattern-mixin($pattern);
   }
 }
@@ -54,7 +81,7 @@
 // Placement
 
 @each $placement in $drawer-placements {
-  .drawer-placement-#{$placement} {
+  .drawer.component-placement-#{$placement} {
     @include drawer-placement-mixin($placement);
   }
 }
@@ -62,7 +89,7 @@
 // Size
 
 @each $size, $props in $drawer-sizes {
-  .drawer-size-#{$size} {
+  .drawer.component-size-#{$size} {
     $min-width: map.get($props, "min-width");
     $width: map.get($props, "width");
 
@@ -70,77 +97,5 @@
       map.get($component-min-width-sizing, $min-width));
     @include map-props-mixin(
       map.get($component-width-sizing, $width));
-  }
-}
-
-// Children
-
-.drawer-body,
-.drawer-header,
-.drawer-footer {
-  box-sizing: border-box;
-  display: flex;
-}
-
-.drawer-body {
-  flex: 1 1 auto;
-  flex-direction: column;
-}
-
-// -- Color
-
-@each $color in $component-colors {
-  .drawer-body-color-#{$color},
-  .drawer-header-color-#{$color},
-  .drawer-footer-color-#{$color} {
-    @include component-color-mixin($color);
-  }
-}
-
-// -- Patern
-
-@each $pattern in $drawer-patterns {
-  .drawer-body-pattern-#{$pattern},
-  .drawer-header-pattern-#{$pattern},
-  .drawer-footer-pattern-#{$pattern} {
-    @include drawer-pattern-mixin($pattern);
-  }
-}
-
-// -- Size
-
-@each $size, $props in $drawer-header-sizes {
-  .drawer-header-size-#{$size} {
-    $padding-x: map.get($props, "padding-x");
-    $padding-y: map.get($props, "padding-y");
-
-    @include map-props-mixin(
-      map.get($component-padding-x-sizing, $padding-x));
-    @include map-props-mixin(
-      map.get($component-padding-y-sizing, $padding-y));
-  }
-}
-
-@each $size, $props in $drawer-body-sizes {
-  .drawer-body-size-#{$size} {
-    $padding-x: map.get($props, "padding-x");
-    $padding-y: map.get($props, "padding-y");
-
-    @include map-props-mixin(
-      map.get($component-padding-x-sizing, $padding-x));
-    @include map-props-mixin(
-      map.get($component-padding-y-sizing, $padding-y));
-  }
-}
-
-@each $size, $props in $drawer-footer-sizes {
-  .drawer-footer-size-#{$size} {
-    $padding-x: map.get($props, "padding-x");
-    $padding-y: map.get($props, "padding-y");
-
-    @include map-props-mixin(
-      map.get($component-padding-x-sizing, $padding-x));
-    @include map-props-mixin(
-      map.get($component-padding-y-sizing, $padding-y));
   }
 }
