--- a/src/scss/components/typography/_variables.scss
+++ b/src/scss/components/typography/_variables.scss
@@ -1,7 +1,10 @@
-$text-color: var(--color-text);
+$subtitle-color: var(--color-text);
+$headline-color: var(--color-text);
+$headline-color: var(--color-text);
 
 /* Headline */
 
+$headline-color: var(--color-headline);
 $headline-font-family: var(--font-family-headline);
 $headline-line-height: var(--line-height-headline);
 $headline-1-font-size: var(--font-size-headline-1);
@@ -19,6 +22,7 @@ $headline-6-font-weight: var(--font-weight-medium);
 
 /* Subtitle */
 
+$subtitle-color: var(--color-subtitle);
 $subtitle-font-family: var(--font-family-subtitle);
 $subtitle-line-height: var(--line-height-subtitle);
 $subtitle-1-font-size: var(--font-size-subtitle-1);
@@ -28,6 +32,7 @@ $subtitle-2-font-weight: var(--font-weight-medium);
 
 /* Text */
 
+$text-color: var(--color-text);
 $text-font-family: var(--font-family-body);
 $text-line-height: var(--line-height-body);
 $text-1-font-size: var(--font-size-body-1);
@@ -37,6 +42,14 @@ $text-2-font-weight: var(--font-weight-regular);
 
 /* Caption */
 
+$caption-color: var(--color-caption);
 $caption-font-family: var(--font-family-caption);
 $caption-line-height: var(--line-height-caption);
 $caption-font-size: var(--font-size-caption);
+
+/* Overline */
+
+$overline-color: var(--color-overline);
+$overline-font-family: var(--font-family-overline);
+$overline-line-height: var(--line-height-overline);
+$overline-font-size: var(--font-size-overline);
