--- a/src/scss/root/_typography.scss
+++ b/src/scss/root/_typography.scss
@@ -43,6 +43,10 @@
 
   --font-size-caption: #{$font-size-caption};
 
+  // -- Overline
+
+  --font-size-overline: #{$font-size-overline};
+
   /* Font Weight */
 
   --font-weight-bold: #{$font-weight-bold};
