--- a/src/scss/typography/_text.scss
+++ b/src/scss/typography/_text.scss
@@ -24,6 +24,7 @@ a {
   color: var(--color-link);
   cursor: pointer;
   text-decoration: none;
+  transition: var(--animation-duration-fast);
 
   &:hover,
   &:focus {
