--- a/src/scss/variables/_typography.scss
+++ b/src/scss/variables/_typography.scss
@@ -43,6 +43,10 @@ $font-size-body-1: $font-size-body-2 * ($font-scale) !default;
 
 $font-size-caption: $font-size-xs !default;
 
+// -- Overline
+
+$font-size-overline: $font-size-xxs !default;
+
 /* Font Weight */
 
 $font-weight-bold: 600 !default;
