--- a/src/scss/components/badge/_variables.scss
+++ b/src/scss/components/badge/_variables.scss
@@ -1,8 +1,6 @@
+$badge-border-radius: var(--border-radius-base) !default;
 $badge-border-width: var(--border-width-base) !default;
 $badge-patterns: ("solid", "subtle", "outline") !default;
-$badge-placements: (
-  "top-left", "top-right", "bottom-left", "bottom-right"
-) !default;
 $badge-sizes: (
   "xs": (
     "font-size": "xxs", "gap": "1", "height": "4", "min-width": "4", "padding-x": "1"
@@ -11,6 +9,6 @@ $badge-sizes: (
     "font-size": "xs",  "gap": "2", "height": "6", "min-width": "6", "padding-x": "2"
   ),
   "base": (
-    "font-size": "sm",  "gap": "2", "height": "8", "min-width": "8", "padding-x": "3"
+    "font-size": "xs",  "gap": "3", "height": "8", "min-width": "8", "padding-x": "3"
   )
 ) !default;
