--- a/src/scss/components/box/_base.scss
+++ b/src/scss/components/box/_base.scss
@@ -1,50 +1,6 @@
-@use "sass:map";
-
 .box {
-  align-items: center;
-  border-style: solid;
-  border-width: $box-border-width;
   box-sizing: border-box;
   display: flex;
-  justify-content: center;
-}
-
-// Color
-
-@each $color in $component-colors {
-  .box-color-#{$color} {
-    @include component-color-mixin($color);
-  }
-}
-
-// Patern
-
-@each $pattern in $box-patterns {
-  .box-pattern-#{$pattern} {
-    @include box-pattern-mixin($pattern);
-  }
-}
-
-// Shape
-
-@each $shape in $box-shapes {
-  $props: map.get($component-shapes, $shape);
-
-  .box-shape-#{$shape} {
-    @include map-props-mixin($props);
-  }
-}
-
-// Size
-
-@each $size, $props in $box-sizes {
-  .box-size-#{$size} {
-    $height: map.get($props, "height");
-    $min-width: map.get($props, "min-width");
-
-    @include map-props-mixin(
-      map.get($component-height-sizing, $height));
-    @include map-props-mixin(
-      map.get($component-min-width-sizing, $min-width));
-  }
+  flex-direction: column;
+  position: relative;
 }
