--- a/src/scss/components/container/_base.scss
+++ b/src/scss/components/container/_base.scss
@@ -1,9 +1,10 @@
 %container {
   box-sizing: border-box;
   display: flex;
+  flex: 1 1 auto;
+  height: 100%;
   margin-left: auto;
   margin-right: auto;
-  padding: $container-padding-y $container-padding-x;
   width: 100%;
 }
 
