--- a/src/scss/components/typography/_base.scss
+++ b/src/scss/components/typography/_base.scss
@@ -1,10 +1,9 @@
 /* Headline */
 
 .headline {
-  color: $text-color;
+  color: $headline-color;
   font-family: $headline-font-family;
   line-height: $headline-line-height;
-  opacity: 0.88;
 
   @at-root {
 
@@ -49,10 +48,9 @@
 /* Subtitle */
 
 .subtitle {
-  color: $text-color;
+  color: $subtitle-color;
   font-family: $subtitle-font-family;
   line-height: $subtitle-line-height;
-  opacity: 0.88;
 }
 
 .subtitle-level-1 {
@@ -73,7 +71,6 @@
   color: $text-color;
   font-family: $text-font-family;
   line-height: $text-line-height;
-  opacity: 0.64;
 }
 
 .text-level-1 {
@@ -91,10 +88,20 @@
 /* Caption */
 
 .caption {
-  color: $text-color;
+  color: $caption-color;
   font-family: $caption-font-family;
   font-size: $caption-font-size;
   letter-spacing: 0.4px;
   line-height: $caption-line-height;
-  opacity: 0.48;
+}
+
+/* Overline */
+
+.overline {
+  color: $overline-color;
+  font-family: $overline-font-family;
+  font-size: $overline-font-size;
+  letter-spacing: 1.5px;
+  line-height: $overline-line-height;
+  text-transform: uppercase;
 }
