--- a/src/scss/mixins/_components.scss
+++ b/src/scss/mixins/_components.scss
@@ -34,6 +34,32 @@ Gap */
 
 /*
 ========================================
+Pattern */
+
+@mixin component-pattern-mixin($pattern) {
+  @if $pattern == "solid" {
+    @include component-solid-mixin;
+  }
+
+  @if $pattern == "subtle" {
+    @include component-subtle-mixin;
+  }
+
+  @if $pattern == "outline" {
+    @include component-outline-mixin;
+  }
+
+  @if $pattern == "ghost" {
+    @include component-ghost-mixin;
+  }
+
+  @if $pattern == "link" {
+    @include component-link-mixin;
+  }
+}
+
+/*
+========================================
 Placement */
 
 @mixin component-placement-mixin($name) {
